# vibe-studio

./: .gitignore  .prettierrc  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
scripts/: regenerate_icons.swift
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mcp.json
src-tauri/crates/agent/: Cargo.toml
src-tauri/crates/agent/src/: claude_session_reader.rs  command.rs  discovery.rs  lib.rs  multi_agent.rs  process.rs
src-tauri/crates/agent/src/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs
src-tauri/crates/agent/src/parsers/: claude.rs  claude_full.rs  codex.rs  codex_full.rs  gemini.rs  gemini_full.rs  mod.rs
src-tauri/crates/commands/: Cargo.toml
src-tauri/crates/commands/src/: agent.rs  claude_history.rs  editor.rs  git.rs  lib.rs  project.rs  review.rs  session.rs  slash_commands.rs  terminal.rs  workspace.rs
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/src/: lib.rs
src-tauri/crates/db/src/entities/: agent_process.rs  commit_history.rs  mod.rs  project.rs  review_comment.rs  session.rs  workspace.rs  workspace_repo.rs
src-tauri/crates/db/src/migration/: mod.rs
src-tauri/crates/git/: Cargo.toml
src-tauri/crates/git/src/: branch.rs  cli.rs  clone.rs  command.rs  diff.rs  lib.rs  pr.rs  worktree.rs
src-tauri/crates/review/: Cargo.toml
src-tauri/crates/review/src/: comment.rs  context.rs  lib.rs
src-tauri/crates/terminal/: Cargo.toml
src-tauri/crates/terminal/src/: lib.rs  manager.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/project/: page.tsx
src/app/settings/: page.tsx
src/app/settings/agents/: page.tsx
src/app/settings/appearance/: page.tsx
src/components/agent/: AgentChat.tsx  AgentFilePicker.tsx  AgentImagePreview.tsx  AgentInput.tsx  AgentOutput.tsx  AgentSlashCommandPicker.tsx  MarkdownContent.tsx  ReviewContextBanner.tsx  SessionStats.tsx  ThinkingIndicator.tsx  ToolCallCard.tsx  ToolResultCard.tsx
src/components/ai-elements/: code-block.tsx  message.tsx  terminal.tsx  tool.tsx
src/components/commit/: CommitFlowDialog.tsx  CommitPanel.tsx
src/components/diff/: DiffErrorBoundary.tsx  DiffFileTree.tsx  DiffStats.tsx  DiffToolbar.tsx  DiffViewer.tsx
src/components/multi-agent/: AgentPanelView.tsx  AgentTimelineView.tsx  AgentTreeView.tsx  ViewSwitcher.tsx
src/components/pr/: CreatePRDialog.tsx  PRBadge.tsx
src/components/project/: BranchSelector.tsx  CloneDialog.tsx  ProjectList.tsx
src/components/review/: CommentEditor.tsx  ImportRemoteCommentsDialog.tsx  InlineComment.tsx  ReviewPanel.tsx
src/components/terminal/: TerminalPanel.tsx
src/components/ui/: badge.tsx  button.tsx
src/components/workspace/: FileBrowser.tsx
src/hooks/: useAgent.ts  useCommit.ts  useDiff.ts  useGit.ts  useMultiAgent.ts  useProject.ts  useReview.ts
src/i18n/: request.ts
src/i18n/messages/: en.json  zh-CN.json
src/lib/: tauri.ts  types.ts
src/stores/: agentStore.ts  diffViewStore.ts  multiAgentStore.ts  projectStore.ts  reviewStore.ts
