[package]
name = "vibe-studio-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
which = "7"
dirs = "6"
regex = "1"
libc = "0.2"
walkdir = "2"
